# generic-assistant

./: .env.example  .gitignore  Dockerfile  README.md  ai.py  ai_session.py  assistant.py  chat_entry.py  dev-requirements.txt  docker-compose.yml  example.ipynb  main.py  model.py  pyproject.toml  requirements.in  requirements.txt
src/: ai_session.py  assistant.py  chat_entry.py  chatmodel.py  generic.py  main.py  model_factory.py
src/ai/: ai_session.py  assistant.py  chat_entry.py  chatmodel.py  model_factory.py
src/ui/: generic_ui.py  parser.py  specific_ui.py  ui_factory.py  ui_factory_impl.py
tests/: test_serialize.py
